@@ -11,6 +11,7 @@ linux (5.3.1-1~exp1) UNRELEASED; urgency=medium
   * Compile with gcc-9 on all architectures
   * Set KCFLAGS make variable instead of CFLAGS_{KERNEL,MODULE}
   * linux-image-dbg: Delete ./ from source file names in debug info
+  * debian/rules: Make maintainerclean delete (almost) everything clean does
 
   [ Uwe Kleine-König ]
   * [arm64] enable I2C_QCOM_GENI for Lenovo C630
